--- a/assets/stylys.css
+++ b/assets/stylys.css
@@ -1,11 +1,14 @@
 *{
     margin: 0px;
     padding: 0px;
-    box-sizing: 0px;
+    /*box-sizing: 0px;*/
     font-family: 'Roboto', sans-serif;
 }
 body{
-    overflow: hidden;
+    overflow-x: hidden;
+    margin: 0px;
+    padding: 0px;
+    width: 100%;
 }
 
 .container{
@@ -15,20 +18,42 @@ body{
 
 .nav {
     /*position: fixed;*/
-    width: 25vw;
-    /* height: 100%; */
+    width: 30%;
+    /*height: 100%;*/
     align-items: center;
     display: flex;
-    justify-content: flex-start;
+    justify-content: space-around;
     flex-direction: column;
-    background-color: rgb(5, 107, 107);
+    background-color: rgb(97, 156, 137);
+    
+    
 }
 
-.inputs {
-    width: 25vw;
-    align-items: center;
+.header {
     display: flex;
-    flex-direction: column;
-    justify-content: space-around;
-    background-color: rgb(144, 172, 172);
+    justify-content: flex-start;
+    align-items: center;
+    margin-bottom: 2rem;
+  }
+
+.buttons{
+    background-color: rgb(31, 30, 30);
+    color: white;
+    text-align: center;
+    border-radius: 8px;
+    padding: 12px 28px;
+}
+
+.buttons:hover{
+    background-color: grey;
+    color: black;
+}
+.inputs{
+    padding: 11px 25px;
+    border-radius: 8px;
+}
+
+.date{
+    border-radius: 8px;
+    background-color: grey;
 }
